# todo-fastapi-app

./: database.py  main.py  models.py  pyproject.toml  todos-app.db  todos.db
router/: admin.py  auth.py  todos.py  users.py
